Fix: ad-lib panel's lists were displayed too short

--- a/meteor/client/styles/adLibPanel.scss
+++ b/meteor/client/styles/adLibPanel.scss
@@ -142,7 +142,7 @@ $adlib-item-selected-color: #009DFF;
 			position: relative;
 			display: block;
 			width: 100%;
-			max-height: calc(100% - 1.3em);
+			max-height: 100%;
 			overflow-y: auto;
     		overflow-x: hidden;
 
